# english2logic

./: .gitignore  Dockerfile  GRAMMAR.md  LICENSE  README.md  install.sh  run.sh
examples/: every-fish-swims.json  every-fish-swims.txt  multiple-sentences.json  multiple-sentences.txt  nemo-is-a-fish.json  nemo-is-a-fish.txt  nemo-loves-the-sea.txt  nemo-swims-home.txt  nemo-swims.txt  no-fish-walks.json  no-fish-walks.txt
examples/interpreter/: every-fish-swims.json  multiple-sentences.json  nemo-is-a-fish.json  nemo-loves-the-sea.json  nemo-swims-home.json  nemo-swims.json  no-fish-walks.json
examples/parser/: nemo-loves-the-sea.json  nemo-swims-home.json
interpreter/: README.md  install.sh  lint.sh  project.cabal
interpreter/app/: Main.hs
interpreter/doc/: Main.hs
interpreter/src/: Determiners.hs  Grammar.hs  GrammarTree.hs  IO.hs  Interpretation.hs  Logic.hs  Main.hs  Semantics.hs
interpreter/src/Logic/: Gen.hs  Parser.hs  Prop.hs
interpreter/src/Semantics/: DT.hs  NN.hs  NNP.hs  NP.hs  S.hs  Util.hs  VBZ.hs  VP.hs
interpreter/test/: Examples.hs  LogicTest.hs  Main.hs
parser/: README.md  install.sh  requirements.txt
parser/src/: download.py  main.py  parsing.py  settings.py
testing/: cool-file.json
