cabal-version:      2.4
name:               eng2fol-interpreter
version:            0.1.0.0

executable eng2fol
    main-is:          Main.hs
    other-modules:    Grammar
                      GrammarTree,
                      Logic,
                      Determiners,
                      Semantics
    build-depends:    base ^>=4.16.3.0,
                      aeson,
                      bytestring,
                      filepath,
                      containers,
                      utf8-string
    hs-source-dirs:   src
    default-language: Haskell2010
