cabal-version:      2.4
name:               eng2fol-interpreter
version:            0.1.0.0

common shared-properties
  default-language: Haskell2010
  build-depends:    base ^>=4.16.3.0

library
  import:           shared-properties
  exposed-modules:  Grammar
                    GrammarTree,
                    Logic,
                    Determiners,
                    Interpretation,
                    Semantics.S,
                    Semantics.NP,
                    Semantics.NN,
                    Semantics.NNP,
                    Semantics.VP,
                    Semantics.VBZ,
                    Semantics.DT,
                    Semantics.Util
  build-depends:    aeson,
                    bytestring,
                    containers,
                    utf8-string
  hs-source-dirs:   src

executable eng2fol-interpreter
  import:           shared-properties
  main-is:          Main.hs
  build-depends:    eng2fol-interpreter,
                    filepath
  hs-source-dirs:   app

test-suite examples
  import:           shared-properties
  main-is:          Examples.hs
  ghc-options:      -main-is Examples
  build-depends:    HUnit,
                    directory,
                    filepath,
                    eng2fol-interpreter
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
