cabal-version:      2.4
name:               eng2fol-interpreter
version:            0.1.0.0

common shared-properties
  default-language: Haskell2010
  build-depends:    base ^>=4.16.3.0

library
  import:           shared-properties
  exposed-modules:  Grammar
                    GrammarTree,
                    IO,
                    Logic.Prop,
                    Logic.Parser,
                    Logic.Gen,
                    Determiners,
                    Interpretation,
                    Semantics.S,
                    Semantics.NP,
                    Semantics.NN,
                    Semantics.NNP,
                    Semantics.VP,
                    Semantics.VBZ,
                    Semantics.DT,
                    Semantics.Util
  build-depends:    filepath,
                    aeson,
                    aeson-pretty,
                    bytestring,
                    containers,
                    utf8-string,
                    QuickCheck,
                    split
  hs-source-dirs:   src

executable eng2fol-interpreter
  import:           shared-properties
  main-is:          Main.hs
  build-depends:    filepath,
                    eng2fol-interpreter
  hs-source-dirs:   app

test-suite examples
  import:           shared-properties
  main-is:          Main.hs
  other-modules:    Examples,
                    LogicTest
  build-depends:    HUnit,
                    directory,
                    filepath,
                    QuickCheck,
                    eng2fol-interpreter
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
